# GameTech

./: .gitignore  .gitmodules  LICENSE  README.md
C++/: _clang-format
C++/MultiPlayer/Step 0 - ECS/: CMakeLists.txt  GameModel.cpp  GameModel.hpp  main.cpp
C++/MultiPlayer/Step 0 - ECS/components/: Movement.hpp  Position.hpp  Size.hpp  Sprite.hpp
C++/MultiPlayer/Step 0 - ECS/entities/: Entity.cpp  Entity.hpp  PlayerShip.hpp
C++/MultiPlayer/Step 0 - ECS/systems/: KeyboardInput.cpp  KeyboardInput.hpp  Renderer.cpp  Renderer.hpp  System.cpp  System.hpp
C++/MultiPlayer/Step 1 - Basic/: CMakeLists.txt
C++/MultiPlayer/Step 1 - Basic/shared/: CMakeLists.txt
C++/MultiPlayer/Step 1 - Basic/shared/components/: Appearance.hpp  Input.hpp  Movement.hpp  Position.hpp
C++/MultiPlayer/Step 1 - Basic/shared/entities/: Entity.hpp
C++/MultiPlayer/Step 1 - Basic/shared/messages/: ConnectAck.cpp  ConnectAck.hpp  ConnectSelf.cpp  ConnectSelf.hpp  Input.cpp  Input.hpp  Input.proto  Join.hpp  Message.cpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageTypes.hpp  Movement.proto  NewEntity.hpp  NotifyJoinSelf.cpp  NotifyJoinSelf.hpp  Player.proto  PlayerId.proto  Size.proto  Utility.cpp
C++/MultiPlayer/Step 1 - Basic/shared/messages/protos/: AppearanceComponent.proto  ClientId.proto  Entity.proto  EntityId.proto  Input.proto  MovementComponent.proto  Position.proto  PositionComponent.proto  SpriteComponent.proto  Vector2f.proto
C++/MultiPlayer/Step 1 - Basic/shared/systems/: System.cpp  System.hpp
C++/MultiPlayer/Step 2 - Client Prediction/: CMakeLists.txt
C++/MultiPlayer/Step 4 - Entity Prediction/client/: CMakeLists.txt  GameModel.cpp  GameModel.hpp  main.cpp
C++/MultiPlayer/Step 4 - Entity Prediction/client/components/: Goal.hpp
C++/MultiPlayer/Step 4 - Entity Prediction/client/systems/: Interpolation.cpp  KeyboardInput.cpp  Movement.cpp  Movement.hpp  Network.cpp  Network.hpp  Renderer.cpp  Renderer.hpp
C++/MultiPlayer/Step 5 - Weapons/: CMakeLists.txt
C++/Multiplayer/Step 0 - ECS/: CMakeLists.txt  GameModel.hpp  README.md
C++/Multiplayer/Step 1 - Basic/: CMakeLists.txt  README.md
C++/Multiplayer/Step 2 - Client Prediction/: CMakeLists.txt  README.md
C++/Multiplayer/Step 3 - Entity Interpolation/: CMakeLists.txt  README.md
C++/Multiplayer/Step 4 - Entity Prediction/: CMakeLists.txt  README.md
C++/Multiplayer/Step 4 - Entity Prediction/shared/: CMakeLists.txt
C++/Multiplayer/Step 4 - Entity Prediction/shared/components/: Input.hpp  Movement.hpp
C++/Multiplayer/Step 4 - Entity Prediction/shared/entities/: Player.cpp  Player.hpp
C++/Multiplayer/Step 4 - Entity Prediction/shared/messages/: ConnectAck.hpp  Message.hpp  UpdateEntity.hpp  Utility.cpp  Utility.hpp
C++/Multiplayer/Step 4 - Entity Prediction/shared/systems/: System.hpp
C++/Multiplayer/Step 5 - Weapons/: CMakeLists.txt  README.md
C++/Multiplayer/Step 5 - Weapons/server/: CMakeLists.txt  GameModel.cpp  GameModel.hpp  MessageQueueServer.cpp  main.cpp
C++/Multiplayer/Step 5 - Weapons/server/systems/: Damage.cpp  Damage.hpp  Momentum.cpp  Momentum.hpp  Network.cpp
JavaScript/Custom Fonts/: README.md  index.html  server.js
JavaScript/Custom Fonts/assets/: kenvector_future_thin.eot
JavaScript/Custom Fonts/scripts/: loader.js  main.js  model.js
JavaScript/Custom Fonts/styles/: canvas.css
JavaScript/DynamicLoading/: .eslintrc.json  README.md  index.html  server.js
JavaScript/DynamicLoading/scripts/: loader.js  main.js  model.js
JavaScript/DynamicLoading/styles/: canvas.css
JavaScript/Input/: README.md  index.html  server.js
JavaScript/Input/scripts/: main.js  model.js
JavaScript/Input/styles/: canvas.css
JavaScript/MoveToPoint/: README.md  index.html  server.js
JavaScript/MoveToPoint/scripts/: loader.js  main.js  model.js
JavaScript/MultiPlayer/Step 1 - Basic/: README.md  index.html  server.js
JavaScript/MultiPlayer/Step 2 - Client Prediction/: README.md  package-lock.json
JavaScript/MultiPlayer/Step 3 - Entity Interpolation/: README.md  index.html
JavaScript/MultiPlayer/Step 4 - Entity Prediction/: README.md  index.html  package.json
JavaScript/MultiPlayer/Step 5 - Weapons/: README.md  index.html
JavaScript/MultiPlayer/Step 6 - Update Rate/: README.md  index.html
JavaScript/Multiplayer/Step 1 - Basic/: README.md  index.html  package-lock.json  package.json  server.js
JavaScript/Multiplayer/Step 2 - Client Prediction/: README.md  index.html
JavaScript/Multiplayer/Step 3 - Entity Interpolation/: README.md  index.html  package.json
JavaScript/Multiplayer/Step 4 - Entity Prediction/: README.md  index.html
JavaScript/Multiplayer/Step 5 - Weapons/: README.md  index.html  package-lock.json
JavaScript/Multiplayer/Step 6 - Update Rate/: index.html
JavaScript/ParticleSystem/: .eslintrc.json  README.md  index.html
JavaScript/ParticleSystem/scripts/: loader.js  main.js  model.js
JavaScript/QuadTree/: README.md  index.html
JavaScript/QuadTree/scripts/: Input.js  QuadTree.js  Random.js  components.js  main.js  model.js  renderer.js
JavaScript/QuadTreeFrustum/: .eslintrc.json  README.md  index.html
JavaScript/QuadTreeFrustum/scripts/: Input.js  QuadTree.js  Random.js  components.js  main.js  model.js  renderer.js
JavaScript/ResponsiveCanvas/: .eslintrc.json  README.md  index.html  server.js
JavaScript/ResponsiveCanvas/scripts/: CanvasDemo.js
JavaScript/SimpleGame/: .eslintrc.json  README.md  index.html  server.js
JavaScript/SimpleGame/scripts/: Random.js  loader.js  main.js  model.js
JavaScript/SimpleGame/styles/: canvas.css
JavaScript/SnakeGame-ECS/: README.md  index.html
JavaScript/SnakeGame-ECS/scripts/: entity.js  enums.js  loader.js  main.js  model.js
JavaScript/Spritesheet/: README.md  index.html  server.js
JavaScript/TileRendering/: README.md  index.html
doc/Multiplayer/: Developer-Setup-cpp.md  DeveveloperSetup-cpp.md  Multiplayer-Step-1.md  Multiplayer-Step-2.md  Multiplayer-Step-3.md  Multiplayer-Step-4.md  Multiplayer-Step-5.md  README.md
doc/multiplayer/: Multiplayer-Step-1.md  README.md
(+437 files in other folders)
